--- a/index.html
+++ b/index.html
@@ -28,11 +28,45 @@
         </nav>
     </header>
     <main>
-
+        <div class="container">
+            <div>
+                </br>
+                <h3>Realiza tu lista personalizada</h3>
+                </br>
+                <form class="row g-3">
+                    <div class="col-auto">
+                        <input type="text" class="form-control" id="nombreObj" placeholder="Nombre">
+                    </div>
+                    <div class="col-auto">
+                        <input type="text" class="form-control" id="cantidad" placeholder="Cantidad">
+                    </div>
+                    <div class="col-auto">
+                        <button type="submit" class="btn btn-success" onclick="agregarNombre()">Agregar</button>
+                        <button type="submit" class="btn btn-warning" onclick="actualizarRegistro()">Actualizar</button>
+                    </div>
+                </form>
+            </div>
+            </br>
+        </div>
+        <div class="container">
+            <table class="table table-dark table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Elemento</th>
+                        <th scope="col">Cantidad</th>
+                        <th scope="col">Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
     </main>
     <footer>
 
     </footer>
+    <script src="./js/script/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
