--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                 </br>
                 <form class="row g-3">
                     <div class="col-auto">
-                        <label for="nameUser" class="visually-hidden">Nombre</label>
-                        <input type="text" class="form-control" id="nameUser" placeholder="Nombre">
+                        <label for="nameObj" class="visually-hidden">Nombre</label>
+                        <input type="text" class="form-control" id="nameObj" placeholder="Nombre">
                         <input type="hidden" id="position">
                     </div>
                     <div class="col-auto">
-                        <label for="age" class="visually-hidden">Cantidad</label>
-                        <input type="text" class="form-control" id="age" placeholder="Cantidad">
+                        <label for="numberObj" class="visually-hidden">Cantidad</label>
+                        <input type="text" class="form-control" id="numberObj" placeholder="Cantidad">
                     </div>
                     <div class="col-auto">
                         <button type="button" class="btn btn-success" onclick="agregarRegistro()">Agregar</button>
