--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                     <div class="col-auto">
                         <button type="button" class="btn btn-success" onclick="agregarRegistro()">Agregar</button>
                         <button type="button" class="btn btn-warning" onclick="actualizarRegistro()">Actualizar</button>
+                        <button type="button" class="btn btn-danger" onclick="clearCache()">Borrar lista</button>
                     </div>
                 </form>
             </div>
