--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-dark bg-dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Mi lista</a>
+    <header style="text-align: center;">
+        <nav class="navbar navbar-dark bg-dark" >
+            <div class="container-fluid" >
+                <a class="navbar-brand" href="index.html"><h1><strong>Mi lista</strong></h1></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarText">
                     <span class="navbar-text">
-                        Creador de listas personales
+                        <h5>Crea tus propias listas personalizadas con el Creador de "Mi lista" fácil de usar.</h5>
                     </span>
                 </div>
             </div>
@@ -59,6 +59,7 @@
                         <th scope="col">#</th>
                         <th scope="col">Nombre</th>
                         <th scope="col">Cantidad</th>
+                        <th scope="col">Checkbox</th>
                         <th scope="col">Acciones</th>
                     </tr>
                 </thead>
@@ -74,5 +75,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
+
 </html>
