Corrección en redacción

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarText">
                     <span class="navbar-text">
-                        <h5>Crea tus propias listas personalizadas con el Creador de "Mi lista" fácil de usar.</h5>
+                        <h5>Crea tu propia lista personalizadas con el Creador de "Mi lista" fácil de usar.</h5>
                     </span>
                 </div>
             </div>
