--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <footer>
         <div class="container">
             <div>
                 </br>
@@ -65,7 +65,7 @@
                 </tbody>
             </table>
         </div>
-    </main>
+    </footer>
     <script src="./js/script/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
